0.486 2023-09-06

  [New Features]
    * The Sys::Socket::Util class is added.
  
0.485 2023-09-04
  
  [Bug Fix]
    * A bug fix: the sleep method in the Sys class has been wrong.
    
  [Incompatible Changes]
    * The following methods in the Sys class is changed.
    
      -  static method send : int ($sockfd : int, $buf : string, $len : int, $flags : int, $buf_offset : int = 0);
      +  static method send : int ($sockfd : int, $buf : string, $flags : int, $addr : Sys::Socket::Sockaddr = undef);
      
      -  static method select : int ($nfds : int, $readfds : Sys::Select::Fd_set, $writefds : Sys::Select::Fd_set, $exceptfds : Sys::Select::Fd_set, $timeout : Sys::Time::Timeval);          +  static method select : int ($readfds : Sys::Select::Fd_set, $writefds : Sys::Select::Fd_set, $exceptfds : Sys::Select::Fd_set, $timeout : Sys::Time::Timeval);
  
  [Exception Message Changes]
    * Error messages in the Sys::Time::Itimerval class are improved.
  [New Features]
    * The following methods are added to Sys::Socket.
    
      static method closesocket : int ($fd : int);
    
0.484 2023-09-04
  [New Features]
    
    * The following methods are added to the Sys::Socket class.
    
      static method to_family_sockaddr : Sys::Socket::Sockaddr ($addr : Sys::Socket::Sockaddr);
    
    * The following methods are added to the Sys::Socket::Sockaddr class.
    
      +  static method new : Sys::Socket::Sockaddr::In ();
      +  method DESTROY : void ();
      +  method set_sa_family : void ($family : int);
      
    * The following methods in the Sys::Socket::Sockaddr class is implemented.
    
      +  method sa_family : int ();
    
    * The following methods are added to the Sys class.
      + static method closedir : int ($dirp : Sys::IO::DirStream);
      +  static method opendir : int ($dh_ref : Sys::IO::DirStream[], $dir : string);
      +  static method bind : int ($sockfd : int, $addr : Sys::Socket::Sockaddr);