@@ -1,0 +1,45 @@
+package SPVM::Sys::Socket::In_addr_base;
+
+
+
+1;
+
+=head1 Name
+
+SPVM::Sys::Socket::In_addr_base - Short Description
+
+=head1 Description
+
+The Sys::Socket::In_addr_base class of L<SPVM> has methods for someting.
+
+=head1 Usage
+
+  use Sys::Socket::In_addr_base;
+
+=head1 Fields
+
+
+
+=head1 Class Methods
+
+
+
+=head1 Instance Methods
+
+
+
+
+=head1 Repository
+
+
+
+=head1 Author
+
+Yuki Kimoto C<kimoto.yuki@gmail.com>
+
+=head1 Copyright & License
+
+Copyright (c) 2023 Yuki Kimoto
+
+MIT License
+
